# combine

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  consume.py  docker-compose.yml  pyproject.toml  requirements.txt  run-consume.sh  run.sh  run_process.py  run_process.sh  run_uv.bat  run_uv.sh
documentation/: FINAL Scout PlayerQ Report Rules and Content Bank.xlsx  add_players.sql
migrations/: 000001_initial_migration.sql  000002_create_user_table.sql  000003_default_users_and_groups.sql  000004_add_additional_player_info.sql  000005_remove_mobile_no.sql  000006_add_processed.sql  000007_add_processed_field_player_and_year.sql  000008_add_meta_data.sql  000009_adding_selected_speaker_and_statuses.sql  000010_add_is_deleted_to_player_media.sql  000011_add_transcript_result_to_player_media_and_index.sql  000012_add_is_sorted_to_player_media.sql  000013_add_candidate_id_to_player.sql  000014_alter_queue_add_priority.sql  00015_alter_queue_data_column.sql  00016_alter_player_result_modify_data.sql  00017_alter_player_result_add_transcription.sql  00018_alter_player_result_add_transcript_hash.sql  00019_alter_player_transcript_add_verified_speaker.sql  00020_alter_player_transcript_rename_add_timestamp.sql  00021_add_player_result_index.sql  00022_create_sport_table.sql  00023_create_sport_position_table.sql  00024_update_athletes_positions.sql  00025_create_admin_settings.sql
secrets/: domain.cert  private.key  public.key
src/: Aatos.py  __init__.py
src/app/: Aatos.py  Google.py  MiddleWare.py  Player.py  Queue.py  QueueUtility.py  Roles.py  Scraper.py  SessionHandler.py  Setting.py  Setup.py  SpacesHelper.py  UserGroup.py  UserGroups.py  Users.py  Utility.py  classification_rules.txt
src/orm/: AdminSetting.py  Player.py  PlayerMedia.py  PlayerResult.py  PlayerTranscripts.py  Queue.py  Sport.py  SportPosition.py  User.py  UserGroup.py
src/public/: manifest.json  service-worker.js
src/public/css/: aatos.css  default.css  team_q.css
src/public/icons/: icons.json
src/public/js/: emoji.js  profile_cropper.js  team_q.js  tina4helper.js
src/routes/: athlete_videos.py  athletes.py  dashboard.py  home.py  queue.py  settings.py  user_groups.py  users.py  websocket.py
src/scss/: _aatos.scss  _error.scss  _qfinder.scss  _team_q.scss  _team_q_results.scss  _variables.scss  default.scss
src/templates/: admin_settings.twig  base.twig  dashboard.twig  index.twig  sessiontest.twig  settings.twig  test-results.twig
src/templates/auth/: forgot_password.twig  login.twig  sign_up.twig  sign_up_preview.twig
src/templates/components/: csv_mapping_modal.twig  modal_form.twig  position_select.twig  profile_crop_modal.twig
src/templates/dashboard/: athletes.twig  home.twig  queue.twig  user_groups.twig  users.twig
src/templates/forms/: edit_user.twig  user_group.twig
src/templates/media/: sorter.twig
src/templates/player/: links.twig  player-q-results.twig  (+6 more)
src/tests/: test_import_csv_player_data.py
transcribe/: Aatos.py  README.md  app.py  cookies.txt  pyproject.toml  readme.md  requirements.txt  run_dev.sh  run_staging.sh
transcribe/secrets/: domain.cert  private.key  public.key
(+10 files in other folders)
