[tool.poetry]
name = "combine"
version = "0.1.0"
description = ""
authors = ["Andre van Zuydam <andrevanzuydam@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.1.0"
redis = "^5.2.1"
pika = "^1.3.2"
poetry-plugin-export = "^1.9.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
semantic-text-splitter = "^0.22.0"
google = "^3.0.0"
pdfkit = "^1.0.0"
asyncer = "^0.0.8"
pillow = "^11.2.1"
tina4-python = {git = "https://github.com/jacquestvanzuydam/tina4-python.git", rev = "debug/sessions"}

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.9.0"
jurigged = "^0.6.0"
hypercorn = "^0.17.3"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
