[project]
name = "combine"
version = "0.1.0"
description = ""
authors = [
    { name = "Andre van Zuydam", email = "andrevanzuydam@gmail.com" },
    { name = "Jacques van Zuydam", email = "jtvanzuydam@gmail.com" }
]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "mysql-connector-python>=9.1.0,<10",
    "redis>=5.2.1,<6",
    "pika>=1.3.2,<2",
    "poetry-plugin-export>=1.9.0,<2",
    "requests>=2.32.3,<3",
    "beautifulsoup4>=4.12.3,<5",
    "semantic-text-splitter>=0.22.0,<0.23",
    "google>=3.0.0,<4",
    "pdfkit>=1.0.0,<2",
    "asyncer>=0.0.8,<0.0.9",
    "pillow>=11.2.1,<12",
    "mongo-queue-service>=0.2.2",
    "tina4-python>=0.2.109",
]

[dependency-groups]
dev = [
    "poetry-plugin-export>=1.9.0,<2",
    "jurigged>=0.6.0,<0.7",
    "hypercorn>=0.17.3,<0.18",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
